get2gnow 00.00.DB.aFE - UI improvements, expanded URL link & title display, & continued caching improvements.
I've added tooltips to all of get2gnow's primary UI buttons to now every will actually be able to tell what does what.  I can't believe I've left them out for so long.  I use keyboard shortcuts exclusively & didn't even realize it was pretty much a blind guess as to what any thing does.  Now get2gnow should be much more usable though I still need to run it with Orca to make sure its as usable as possible.

I've also done a lot more work on get2gnow's caching though I've hit a lil road block, well not really I just didn't feel like focusing on it today. I have finished all of get2gnow's caching & move all file & directory creation code so its now automatically handled by my caching system.

As for xml caching, which will be used 1st to cache friends & followers.  I'll be creating a custom gobject that expands SoupMessage and loads 'response' headers & body from local files & than parses those streams to load existing known friends & followers.  I'll need to eventually write a thread that 'monitors' friends & followers so new friends & followers are added & old one's are dropped.  Monitoring for new friends & followers isn't what concerns me, its updating local xml files correctly when you stop following someone or vice-a-versa.  Well it doesn't 'concern' me it'll just require a more elaborate algorithm.

Lastly I've exendtend my SexyLabel object & methods a lot & I'm using the methods for much more than just setting markup of Label objects.  Especially I've extended it so get2gnow's TweetView, which is an extended SexyTreeView with a sort model.  So now all URLs are extended so the 'links' now include the target page's title. I've also extended my label url parsing methods so they allow for finer control of how & what expended urls include & whether they're formatted as a hyper link or not.  I've done this so get2gnow will now display url page title's in get2

--- a/data/services-dialog.ui
+++ b/data/services-dialog.ui
@@ -17,7 +17,7 @@
             <property name="visible">True</property>
             <property name="border_width">6</property>
             <property name="n_rows">7</property>
-            <property name="n_columns">2</property>
+            <property name="n_columns">3</property>
             <property name="column_spacing">12</property>
             <property name="row_spacing">12</property>
             <child>
@@ -29,7 +29,7 @@
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
+                <property name="right_attach">3</property>
                 <property name="top_attach">4</property>
                 <property name="bottom_attach">5</property>
                 <property name="y_options"></property>
@@ -43,7 +43,7 @@
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
+                <property name="right_attach">3</property>
                 <property name="top_attach">3</property>
                 <property name="bottom_attach">4</property>
                 <property name="y_options"></property>
@@ -87,7 +87,7 @@
                 <property name="draw_indicator">True</property>
               </object>
               <packing>
-                <property name="right_attach">2</property>
+                <property name="right_attach">3</property>
                 <property name="top_attach">5</property>
                 <property name="bottom_attach">6</property>
                 <property name="x_options">GTK_FILL</property>
@@ -131,7 +131,7 @@
                 <property name="draw_indicator">True</property>
               </object>
               <packing>
-                <property name="right_attach">2</property>
+                <property name="right_attach">3</property>
                 <property name="top_attach">6</property>
                 <property name="bottom_attach">7</property>
               </packing>
@@ -146,7 +146,7 @@
                 <property name="draw_indicator">True</property>
               </object>
               <packing>
-                <property name="right_attach">2</property>
+                <property name="right_attach">3</property>
               </packing>
             </child>
             <child>
@@ -176,9 +176,29 @@
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
+                <property name="right_attach">3</property>
                 <property name="top_attach">2</property>
                 <property name="bottom_attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="delete_service_button">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+		<property name="receives_default">True</property>
+		<property name="tooltip_text" translatable="yes">Delete this account.</property>
+		<child>
+			<object class="GtkImage" id="delete_service_image">
+				<property name="visible">True</property>
+				<property name="stock">gnome-stock-trash</property>
+			</object>
+		</child>
+	      </object>
+              <packing>
+                <property name="left_attach">2</property>
+                <property name="right_attach">3</property>
+                <property name="top_attach">1</property>
+                <property name="bottom_attach">2</property>
               </packing>
             </child>
           </object>
@@ -191,7 +211,7 @@
             <property name="visible">True</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="cancelbutton1">
+              <object class="GtkButton" id="cancel_button">
                 <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -206,7 +226,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="okbutton1">
+              <object class="GtkButton" id="okay_button">
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -244,8 +264,8 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="-6">cancelbutton1</action-widget>
-      <action-widget response="-5">okbutton1</action-widget>
+      <action-widget response="-6">cancel_button</action-widget>
+      <action-widget response="-5">okay_button</action-widget>
       <action-widget response="0">save_button</action-widget>
     </action-widgets>
   </object>
