get2gnow 00.00.DB.aFF - *w00t!* Friends Manager's back! multiple accounts supported fully supported, all requests threaded, tweet display & forwarding 'fixed', & many more improvements.
I've finally got my friends manager back up & working w/full support for multiple accounts.  Muliple accounts are fully supported in all areas they can be, including DMs & Friend's Tweet Viewer.  My caching system is still not fully implemented but I've completely rewrote how friends & followers are downloaded & built into GList(s).  All requests are now queued.  I've implemented support for a callback function to be used when the lists are downloaded.

So now all of get2gnow is still usable while friends & followers are downloaded. So nothing's 'locking up' get2gnow any longer.

I've made drastic improvements to get2gnow's various xml parser methods so they are now much faster & avoid many, albeit uncommon but serious, errors that may have at various point could have caused segfaults.

One other cool thing I've added is notifications when you are @ mentioned in any tweet that appears in the currentimeline.  I want to drastically improve this but for now at least I want miss as many messages just because my heads buried in code.

I've also drastically improved get2gnow's various URL display modes in tweets & how they're handled, not only when displaying but also when replying & retweeting.

I've also done tons of tweaking & improving to various other areas of get2gnow.

I'm very near ready to start releasing packages, creating screen shots, & raising awereness of get2gnow.  I'm very excited to see how every one feels about get2gnow & I'm even more excited to start working w/znmeb & just to start getting any feed back.

I still need to finish writing get2gnow's xml caching, especially for friends & followers.  I also want to have my message notification monitor one's '@ replies/mentions' & direct messages, as well as the current timeline.

Committed on: 2009-05-25 @ 12:52:04 PM

--- a/data/tweet-view.ui
+++ b/data/tweet-view.ui
@@ -339,6 +339,24 @@
                         <property name="position">5</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkToggleButton" id="dm_form_active_togglebutton">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <child>
+                          <object class="GtkImage" id="dm_form_active_image">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-fullscreen</property>
+                          </object>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">6</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -348,25 +366,22 @@
                 </child>
                 <child>
                   <object class="GtkFrame" id="dm_frame">
-                    <property name="sensitive">False</property>
                     <property name="no_show_all">True</property>
                     <property name="label_xalign">0</property>
                     <property name="shadow_type">none</property>
                     <child>
                       <object class="GtkHBox" id="dm_form_hbox">
-                        <property name="sensitive">False</property>
-                        <property name="no_show_all">True</property>
+                        <property name="visible">True</property>
                         <child>
-                          <object class="GtkButton" id="dm_form_show">
+                          <object class="GtkButton" id="dm_refresh">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text" translatable="yes">Send a new direct message by selecting from you list of friends.</property>
-                            <accelerator key="d" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                            <property name="tooltip_text" translatable="yes">Reload your friends list.</property>
                             <child>
-                              <object class="GtkImage" id="dm_form_show_image">
+                              <object class="GtkImage" id="dm_refresh_image">
                                 <property name="visible">True</property>
-                                <property name="stock">gtk-fullscreen</property>
+                                <property name="stock">gtk-refresh</property>
                               </object>
                             </child>
                           </object>
@@ -377,41 +392,9 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="dm_form_hide">
-                            <property name="sensitive">False</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="no_show_all">True</property>
-                            <property name="tooltip_text" translatable="yes">Close/Hide the direct messaging controls.</property>
-                            <child>
-                              <object class="GtkImage" id="dm_form_hide_image">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-close</property>
-                              </object>
-                            </child>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkVSeparator" id="dm_show_vseparator">
-                            <property name="visible">True</property>
-                            <property name="orientation">vertical</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">2</property>
-                          </packing>
-                        </child>
-                        <child>
                           <object class="GtkComboBox" id="followers_combo_box">
-                            <property name="sensitive">False</property>
+                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="no_show_all">True</property>
                             <property name="tooltip_text" translatable="yes">Friends you can send direct messages to.</property>
                             <property name="model">followers_list_store</property>
                             <property name="active">0</property>
@@ -423,15 +406,14 @@
                             </child>
                           </object>
                           <packing>
-                            <property name="position">3</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                         <child>
                           <object class="GtkButton" id="followers_send_dm">
-                            <property name="sensitive">False</property>
+                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="no_show_all">True</property>
                             <property name="tooltip_text" translatable="yes">Send your message as direct message to
 &lt;-- this user.</property>
                             <property name="relief">half</property>
@@ -446,35 +428,14 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
-                            <property name="position">4</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkButton" id="dm_refresh">
-                            <property name="sensitive">False</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="no_show_all">True</property>
-                            <property name="tooltip_text" translatable="yes">Reload your friends list.</property>
-                            <child>
-                              <object class="GtkImage" id="dm_refresh_image">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-refresh</property>
-                              </object>
-                            </child>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">5</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
                     </child>
                     <child type="label">
                       <object class="GtkLabel" id="dm_frame_label">
-                        <property name="sensitive">False</property>
-                        <property name="no_show_all">True</property>
+                        <property name="visible">True</property>
                         <property name="label" translatable="yes">_DM a friend:</property>
                         <property name="use_markup">True</property>
                         <property name="use_underline">True</property>
