--- a/data/following-viewer.ui
+++ b/data/following-viewer.ui
@@ -2,13 +2,13 @@
 <interface>
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkListStore" id="following_liststore">
+  <object class="GtkListStore" id="following_list_store">
     <columns>
       <!-- column-name user_name -->
       <column type="gchararray"/>
       <!-- column-name user_nick -->
       <column type="gchararray"/>
-      <!-- column-name User * -->
+      <!-- column-name User -->
       <column type="gpointer"/>
     </columns>
   </object>
@@ -36,10 +36,10 @@
                     <property name="hscrollbar_policy">never</property>
                     <property name="shadow_type">in</property>
                     <child>
-                      <object class="GtkTreeView" id="following_list">
+                      <object class="GtkTreeView" id="following_tree_view">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="model">following_liststore</property>
+                        <property name="model">following_list_store</property>
                         <property name="reorderable">True</property>
                         <property name="search_column">1</property>
                         <child>
@@ -53,17 +53,6 @@
                               <attributes>
                                 <attribute name="text">0</attribute>
                               </attributes>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkTreeViewColumn" id="online_service_treeviewcolumn">
-                            <property name="title">@</property>
-                            <property name="clickable">True</property>
-                            <property name="reorderable">True</property>
-                            <property name="sort_indicator">True</property>
-                            <child>
-                              <object class="GtkCellRendererText" id="cellrenderertext1"/>
                             </child>
                           </object>
                         </child>
@@ -125,7 +114,6 @@
                       <object class="GtkButton" id="user_block">
                         <property name="label" translatable="yes">_Block</property>
                         <property name="visible">True</property>
-                        <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
