--- a/data/popup-dialog.ui
+++ b/data/popup-dialog.ui
@@ -6,102 +6,89 @@
     <property name="visible">True</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Add a friend</property>
-    <property name="resizable">False</property>
+    <property name="window_position">center-on-parent</property>
     <property name="type_hint">dialog</property>
+    <property name="skip_taskbar_hint">True</property>
+    <property name="skip_pager_hint">True</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="vbox9">
+      <object class="GtkVBox" id="vbox">
         <property name="visible">True</property>
         <property name="spacing">12</property>
         <child>
-          <object class="GtkTable" id="table2">
+          <object class="GtkLabel" id="used_for_label">
             <property name="visible">True</property>
-            <property name="border_width">6</property>
-            <property name="n_rows">3</property>
-            <property name="n_columns">2</property>
-            <property name="column_spacing">12</property>
-            <property name="row_spacing">12</property>
+            <property name="xalign">0.05000000074505806</property>
+            <property name="yalign">0.10000000149011612</property>
+            <property name="label" translatable="yes">label</property>
+            <property name="use_markup">True</property>
+            <property name="wrap">True</property>
+            <property name="wrap_mode">word-char</property>
+          </object>
+          <packing>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkFrame" id="username_frame">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">none</property>
             <child>
-              <object class="GtkEntry" id="entry">
+              <object class="GtkAlignment" id="alignment2">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="invisible_char">&#x2022;</property>
+                <property name="left_padding">24</property>
+                <child>
+                  <object class="GtkEntry" id="entry">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                  </object>
+                </child>
               </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
-                <property name="y_options"></property>
-              </packing>
             </child>
-            <child>
+            <child type="label">
               <object class="GtkLabel" id="username_label">
                 <property name="visible">True</property>
-                <property name="xalign">0</property>
-                <property name="label" translatable="yes">_Username:</property>
+                <property name="label" translatable="yes">&lt;b&gt;_Username:&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">entry</property>
               </object>
-              <packing>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
-                <property name="x_options"></property>
-                <property name="y_options"></property>
-              </packing>
             </child>
+          </object>
+          <packing>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkFrame" id="online_services_frame">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">none</property>
             <child>
-              <object class="GtkFrame" id="online_service_frame">
+              <object class="GtkAlignment" id="alignment1">
                 <property name="visible">True</property>
-                <property name="label_xalign">0</property>
-                <property name="shadow_type">none</property>
+                <property name="left_padding">24</property>
                 <child>
-                  <object class="GtkAlignment" id="alignment1">
+                  <object class="GtkComboBox" id="online_services_combo_box">
                     <property name="visible">True</property>
-                    <property name="left_padding">12</property>
+                    <property name="model">online_services_list_store</property>
                     <child>
-                      <object class="GtkComboBox" id="online_services_combo_box">
-                        <property name="visible">True</property>
-                        <property name="model">online_services_list_store</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="online_service_url_cellrenderertext"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
-                      </object>
+                      <object class="GtkCellRendererText" id="online_service_url_cellrenderertext"/>
+                      <attributes>
+                        <attribute name="text">0</attribute>
+                      </attributes>
                     </child>
                   </object>
                 </child>
-                <child type="label">
-                  <object class="GtkLabel" id="online_service_label">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;On_line @:&lt;/b&gt;</property>
-                    <property name="use_markup">True</property>
-                    <property name="use_underline">True</property>
-                  </object>
-                </child>
               </object>
-              <packing>
-                <property name="right_attach">2</property>
-                <property name="top_attach">2</property>
-                <property name="bottom_attach">3</property>
-                <property name="y_options"></property>
-              </packing>
             </child>
-            <child>
-              <object class="GtkLabel" id="used_for_label">
+            <child type="label">
+              <object class="GtkLabel" id="online_service_label">
                 <property name="visible">True</property>
-                <property name="xalign">0.05000000074505806</property>
-                <property name="yalign">0.10000000149011612</property>
-                <property name="label" translatable="yes">label</property>
+                <property name="label" translatable="yes">&lt;b&gt;_Account:&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
-                <property name="wrap">True</property>
-                <property name="wrap_mode">word-char</property>
+                <property name="use_underline">True</property>
               </object>
-              <packing>
-                <property name="right_attach">2</property>
-                <property name="x_options">GTK_FILL</property>
-              </packing>
             </child>
           </object>
           <packing>
@@ -146,7 +133,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="pack_type">end</property>
-            <property name="position">0</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </object>
